--- a/hamac-mirage.html
+++ b/hamac-mirage.html
@@ -10,22 +10,22 @@
   </head>
   <body class="tresorBody">
         <span id="start"></span>
-        <header class="flexWrap padding justifyBetween alignCenter">
-            <a class="flexWrap lienLogo alignCenter" href="./index.html" title="Accueil MNTA">
-                <img src="./assets/logo_mnta.png" alt="Logo du marché noir"> MNTA
+        <header class="flexWrap justifyBetween alignCenter gap">
+            <a class="flexWrap gap lienLogo alignCenter" href="./index.html" title="Accueil du MNTA">
+                <div class="imageLogo">
+                    <img src="./assets/logo_mnta.png" alt="Logo du marché noir" class="responsive"> 
+                </div>
+                <p>MNTA</p>
             </a>
             <div class="inputSearch">
-                <input type="text" placeholder="Recherchez un trésor ">
+                <input type="text" placeholder="Recherchez un trésor">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <a class="bouton" href="" title="Voir tous les trésors">
-                    Tout voir
-                </a>
             </div>
             <div class="flexWrap justifyEnd boutonMenu">
-                <a class="bouton boutonImportant" href="" title="Proposer un trésor">
+                <a class="bouton boutonImportant" href="" title="Ajouter un trésor">
                     Nouveau trésor
                 </a>
-                <a class="bouton" href="" title="Voir mon profil">
+                <a class="bouton" href="" title="Accès à mon profil">
                     Mon comptoir
                 </a>
             </div>
